samples/_failures_safe/1761242909_881e44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_783122e9.c: In function ‘main’:
./samples/SAFE/__tmp_783122e9.c:180:5: error: expected expression at end of input
  180 |     for (int j =
      |     ^~~
./samples/SAFE/__tmp_783122e9.c:180:5: error: expected declaration or statement at end of input
